<resources>
    <string name="app_name">IWMB_Cookdome</string>
    <string name="profile">Profile</string>
    <string name="ownRecipes">Own recipes</string>
    <string name="likedRecipes">Liked recipes</string>
    <string name="logout">logout</string>
    <string name="menue">Burgermenue</string>
    <string name="logo">Cookdome Logo</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="filter">filter</string>
    <string name="preptime">Preptime</string>
    <string name="breakki">Breakfast</string>
    <string name="dietary">Dietary</string>
    <string name="unfoldDietary">unfold Dietary Requirements</string>
    <string name="ingredient">Ingredient</string>
    <string name="addIngredient">Add Ingredient</string>
    <string name="unfoldCat">Unfold Category</string>
    <string name="categories">Categories</string>
    <string name="mainMeal">Main Meal</string>
    <string name="appetizer">Appetizer</string>
    <string name="dessert">Dessert</string>
    <string name="snack">Snack</string>
    <string name="Soup">Soup</string>
    <string name="glutenfree">Glutenfree</string>
    <string name="lactosefree">Lactosefree</string>
    <string name="vegetar">Vegetarian</string>
    <string name="paleo">Paleo</string>
    <string name="vegan">Vegan</string>
    <string name="lowfat">Low Fat</string>
    <string name="none">None</string>
    <string name="privates">Private</string>
    <string name="publics">Public</string>
    <string name="salad">Salad</string>
    <string name="minutes">minutes</string>
    <string name="cancel">Cancel</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="remove">Remove item</string>
    <string name="image">Image</string>
    <string name="category">Category</string>
    <string name="portions">Portions</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="amount">Amount</string>
    <string name="unit">Unit</string>
    <string name="leftovers">Leftovers</string>
    <string name="randomRecipe">Random recipe</string>
    <string name="addRecipe">Add recipe</string>
    <string name="soup">Soup</string>
    <string name="diet">Diet</string>
    <string name="details">Details</string>
    <string name="all">All</string>
    <string name="chooseDiet">Choose Diet</string>
    <string name="step">Step</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="update">Update Ingredient</string>
    <string name="edit">Edit</string>
    <string name="sc_added">Added to Shoppingcart</string>
    <string name="sc_updated">Updated shoppinglist</string>
    <string name="sc_empty">shoppingList is empty</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_image_selected">No Image selected</string>
    <string name="choosePhoto">Please choose a photo</string>
    <string name="enterName">Please enter a Name</string>
    <string name="enterMail">Please enter an Email address</string>
    <string name="invalidMail">The Email-address you entered is not valid</string>
    <string name="enterPassword">Please enter a password</string>
    <string name="passwordLength">The password needs to be at least 8 characters long</string>
    <string name="repeatPasword">Please repeat the password</string>
    <string name="wrongPassword">The paswords dont match</string>
    <string name="userExists">A user with this email already exists</string>
    <string name="uploadSuccess">Upload successful</string>
    <string name="authFailed">Authentication failed</string>
    <string name="signedOut">Please Log in</string>
    <string name="added">Added</string>
    <string name="shoppingList">Shoppinglist</string>
    <string name="slEmpty">Your Shoppinglist is empty</string>
    <string name="removed">removed</string>
    <string name="no_name_selected">Please enter recipe name</string>
    <string name="chooseCat">choose category</string>
    <string name="enterPreptime">Please enter prep time</string>
    <string name="enterPortions">Please enter portions</string>
    <string name="addIngredients">Please enter ingredients</string>
    <string name="addSteps">Please add prep-steps</string>
    <string name="deletSuccess">successfully deleted</string>
    <string name="sthWrong">something went wrong</string>
    <string name="dataRetrFailed">data retrieval failed</string>
    <string name="enterStep">enter a step</string>
    <string name="enterIngr">enter Ingredientname</string>
    <string name="chooseUnit">choose Unit</string>
    <string name="enterAmount">enter ingredient amount</string>
    <string name="done">Done</string>
    <string name="mail">Email</string>
    <string name="retreived">Data retreived</string>
    <string name="dBEmpty">database empty</string>
    <string name="dataRetrievalFailed">data retreival failed</string>
    <string name="noMatch">No items matched your search</string>
    <string name="noChange">No changes entered</string>
    <string name="noPassMatch">Passwords dont match</string>
    <string name="minLength">Password must be min 8 characters long</string>
    <string name="setPortions">Select Portions</string>
    <string name="ok">OK</string>
    <string name="changesApplied">changes applied</string>
    <string name="number2small">Number too small</string>
    <string name="updateSuccess">update successful</string>
    <string name="mailUpdated">email updated</string>
    <string name="confirmed">confirmed</string>
    <string name="confirmIdentity">Confirm Identity</string>
    <string name="loginsuccess">login successful</string>
    <string name="invalidCred">invalid Credentials</string>
    <string name="UserNotExist">user doesnt exist</string>
    <string name="shared">shared successfully</string>
    <string name="share">share</string>
    <string name="cantShare"><![CDATA[This Recipe is private & shouldnt be shared]]></string>
    <string name="sharedRecipes">Shared recipes</string>
    <string name="noLeftoversSelected">no leftovers selected</string>
    <string name="haredWith">Shared with</string>
    <string name="chooseSource">Choose source</string>
    <string name="enterLeftover">enter leftover name</string>
    <string name="language">language</string>
    <string name="chooseLanguage">Select language</string>


</resources>