<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/profile"
            android:icon="@drawable/person"
            android:title="@string/profile"/>
        <item android:id="@+id/ownRecipes"
            android:icon="@drawable/egg"
            android:title="@string/ownRecipes"/>
        <item android:id="@+id/likedRecipes"
            android:icon="@drawable/liked"
            android:title="@string/likedRecipes"/>
        <item android:id="@+id/shoppingList"
            android:icon="@drawable/shoppinglist"
            android:title="@string/shoppingList"/>
        <item android:id="@+id/sharedRecipes"
            android:icon="@drawable/shared"
            android:title="@string/sharedRecipes"/>
        <item android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/logout"/>


    </group>

</menu>