<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        android:layout_margin="4dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightpink"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientlist">

        <TextView
            android:id="@+id/unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editamount"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/unit"
            android:background="@color/lightpink"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"/>

        <ImageButton
            android:contentDescription="@string/edit"
            android:id="@+id/editIngrBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            app:srcCompat="@drawable/edit"
            android:background="@drawable/lavender_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <ImageButton
            android:contentDescription="@string/update"
            android:id="@+id/updateIngredient"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            app:srcCompat="@drawable/sync"
            android:background="@drawable/lavender_btn"
            app:layout_constraintBottom_toTopOf="@+id/removeIngredient"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"/>

        <ImageButton
            android:contentDescription="@string/remove"
            android:id="@+id/removeIngredient"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/remove"
            android:background="@drawable/lavender_btn"
            android:visibility="gone"/>


        <EditText
            android:id="@+id/editingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@color/lightpink"
            android:hint="@string/ingredient"
            android:inputType="textShortMessage"
            android:paddingHorizontal="10dp"
            android:paddingVertical="12dp"
            app:flow_horizontalAlign="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/unit"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/editamount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@color/lightpink"
            android:hint="@string/amount"
            android:inputType="numberSigned|number"
            android:paddingHorizontal="10dp"
            android:paddingVertical="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.cardview.widget.CardView>